<resources>
    <string name="app_name">SpotiGuessr</string>
    <string name="my_playlists">My playlists</string>
    <string name="number_of_tracks">%1$s tracks</string>
    <string name="skip">Skip</string>
    <string name="take_a_guess_here">Take a guess here</string>
    <string name="track_progress">%1$d / %2$d</string>
    <string name="game_finished">Game finished!</string>
    <string name="artist">Artist</string>
    <string name="track_name">Track name</string>
    <string name="playlist_cover_image">Playlist cover image</string>
    <string name="are_you_ready">Are you ready?</string>
    <string name="lets_go">Let\'s go!</string>
    <string name="cancel">Cancel</string>
    <string name="go_back">Go back</string>
    <string name="good_luck">Good luck!</string>
    <string name="okay">Okay</string>
    <string name="loading_tracks">Loading tracks…</string>
    <string name="error_loading_tracks">Error while loading tracks.</string>
    <string name="next">Next</string>
    <string name="here_is_your_score">Here is your score:</string>
    <string name="share">Share</string>
    <string name="loading_image_for_playlists">Loading image for playlists</string>
    <string name="share_intent_message">I scored %1$d%% on Spotiguessr!</string>
    <string name="error">Error</string>
    <string name="game_setup">Game setup</string>
    <string name="done">Done</string>
    <string name="number_of_rounds">Number of rounds</string>
    <string name="difficulty">Difficulty</string>
    <string name="tracks_only_mode">Tracks only mode</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="off">Off</string>
    <string name="on">On</string>
    <string name="length_limit">/%1$d</string>
    <string name="play_again">Play again</string>
    <string name="score_percentage">%1$d%%</string>
    <string name="round_over">Round over!</string>
    <string name="connect_with_spotify">Connect with Spotify</string>
    <string name="search">Search</string>
</resources>