<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.alexandre.marcq.spotiguessr.config.ConfigViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondaryColor">

        <TextView
            android:id="@+id/config_lenght_text"
            style="@style/text_style"
            android:text="@string/number_of_rounds"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/config_length_edit"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25" />

        <EditText
            android:id="@+id/config_length_edit"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:autofillHints="no"
            android:ems="10"
            android:fontFamily="@font/raleway"
            android:inputType="number"
            android:textColor="@color/secondaryTextColor"
            app:layout_constraintBottom_toBottomOf="@+id/config_lenght_text"
            app:layout_constraintEnd_toStartOf="@+id/config_length_limit_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/config_lenght_text"
            app:layout_constraintTop_toTopOf="@+id/config_lenght_text"
            tools:text="20" />

        <TextView
            android:id="@+id/config_length_limit_text"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/config_length_edit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/config_length_edit"
            app:layout_constraintTop_toTopOf="@+id/config_length_edit"
            app:layout_constraintVertical_bias="0.527"
            tools:text="/ 20" />

        <TextView
            android:id="@+id/config_difficulty_text"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/difficulty"
            app:layout_constraintStart_toStartOf="@+id/config_lenght_text"
            app:layout_constraintTop_toBottomOf="@+id/config_lenght_text" />

        <RadioGroup
            android:id="@+id/config_difficulty_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:checkedButton="@id/config_easy_radio"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/config_difficulty_text">

            <RadioButton
                android:id="@+id/config_easy_radio"
                style="@style/radio_style"
                android:text="@string/easy" />

            <RadioButton
                android:id="@+id/config_medium_radio"
                style="@style/radio_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:buttonTint="@color/primaryLightColor"
                android:text="@string/medium"
                android:textColor="@color/secondaryTextColor" />

            <RadioButton
                android:id="@+id/config_hard_radio"
                style="@style/radio_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hard"
                android:textColor="@color/secondaryTextColor" />
        </RadioGroup>

        <TextView
            android:id="@+id/config_tracksonly_text"
            style="@style/text_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/tracks_only_mode"
            app:layout_constraintEnd_toStartOf="@+id/config_onlytracks_switch"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/config_difficulty_group" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/config_onlytracks_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/config_tracksonly_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/config_tracksonly_text"
            app:layout_constraintTop_toTopOf="@+id/config_tracksonly_text" />

        <Button
            android:id="@+id/config_cancel_button"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/go_back"
            app:layout_constraintEnd_toStartOf="@+id/config_done_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/config_tracksonly_text" />

        <Button
            android:id="@+id/config_done_button"
            style="@style/button_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/done"
            app:layout_constraintBaseline_toBaselineOf="@+id/config_cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/config_cancel_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>